--- a/BusquedaTabu/BT_AgenteViajero.ipynb
+++ b/BusquedaTabu/BT_AgenteViajero.ipynb
@@ -8,7 +8,8 @@
       "collapsed_sections": [
         "QYfC60IL8zSX",
         "epx1l9bz6uZZ"
-      ]
+      ],
+      "toc_visible": true
     },
     "kernelspec": {
       "name": "python3",
@@ -68,6 +69,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_qbuoiyJltrj"
+      },
+      "source": [
+        "# Librerias"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "J1tGednUP5FI"
@@ -79,7 +89,7 @@
         "from math import floor\n",
         "import numpy as np"
       ],
-      "execution_count": 348,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -113,7 +123,7 @@
         "  X0 = X0+tmp+X0\n",
         "  return (X0)"
       ],
-      "execution_count": 349,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -122,7 +132,7 @@
         "id": "epx1l9bz6uZZ"
       },
       "source": [
-        "# [Función] Generación de solución greedy\n",
+        "# [Función] Generación de solución greedy única\n",
         "\n",
         "> La generación de esta solución greedy fue hecha especificamente para el problema del manual de metaheuristicas, no es generica dada un input"
       ]
@@ -154,7 +164,7 @@
         "  return (min_value, city_key) \n",
         "  "
       ],
-      "execution_count": 350,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -208,7 +218,7 @@
         "  my_way.append('0')\n",
         "  return(my_way)"
       ],
-      "execution_count": 351,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -222,7 +232,7 @@
         "# it works!\n",
         "# ['0', '5', '3', '8', '9', '6', '2', '7', '1', '4', '0'], 271\n"
       ],
-      "execution_count": 352,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -273,7 +283,7 @@
         "  \n",
         "  return (distance)\n"
       ],
-      "execution_count": 353,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -300,7 +310,7 @@
         "#print(f(x, all_cities))\n",
         "# it works!"
       ],
-      "execution_count": 354,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -335,7 +345,7 @@
         "      pass\n",
         "  return (tabu_list)"
       ],
-      "execution_count": 355,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -367,7 +377,7 @@
         "\n",
         "  return (status)"
       ],
-      "execution_count": 356,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -408,14 +418,18 @@
         "    tmp[index_city] = val_tmp\n",
         "    # volvemos a la solución con la que entramos a esta función\n",
         "    tmp_solution = current_solution.copy()\n",
-        "    #almacenamos la solución generada a partir del intercambio de posiciones\n",
-        "    neighborhood.append(tmp)\n",
+        "    # Evitamos almacenar el camino que le pasamos como input\n",
+        "    if tmp == current_solution:\n",
+        "      pass\n",
+        "    else:\n",
+        "      #almacenamos la solución generada a partir del intercambio de posiciones\n",
+        "      neighborhood.append(tmp)\n",
         "\n",
         "  #print(neighborhood)\n",
         "\n",
         "  return (neighborhood, city)"
       ],
-      "execution_count": 398,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -425,14 +439,14 @@
       },
       "source": [
         "# test for getNeighborhood\n",
-        "#x = ['0', '6', '2', '3', '7', '8', '5', '1', '4', '0']\n",
-        "#ecindario, city_used = get_neighborhood(x)\n",
+        "#x = ['0', '1', '4', '7', '2', '6', '9', '8', '3', '5', '0']\n",
+        "#vecindario, city_used = get_neighborhood(x)\n",
         "#for i in vecindario:\n",
         "  #print(i)\n",
         "#print(len(vecindario), city_used)\n",
         "# It works!"
       ],
-      "execution_count": 404,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -461,7 +475,7 @@
         "  return(np.where(matrix,matrix,matrix.T))\n",
         "#dis_mat = np.where(matrix,matrix,matrix.T)"
       ],
-      "execution_count": 359,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -484,7 +498,7 @@
         "# it works!\n",
         "#adj"
       ],
-      "execution_count": 360,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -537,7 +551,7 @@
         "  #return (min_value, city_key)\n",
         "  return (adj_matrix[city_key], city_key)"
       ],
-      "execution_count": 361,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -546,7 +560,7 @@
         "id": "VF-gtelYwq8Y"
       },
       "source": [
-        "# [Función] Generación de solución greedy"
+        "# [Función] Generación de solución greedy generica"
       ]
     },
     {
@@ -582,7 +596,7 @@
         "  return(my_way)\n",
         "    "
       ],
-      "execution_count": 362,
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -594,7 +608,7 @@
         "#way = generate_greedy_solution_adj_matrix(adjacency_matrix)\n",
         "#print(way, f(way, my_cities))"
       ],
-      "execution_count": 363,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -645,7 +659,7 @@
         "  #print(f\"diccionario de ciudades: {my_cities}\\narreglo de arreglos: {distances}\")\n",
         "  return (my_cities, adj_distances, N, Imax)"
       ],
-      "execution_count": 364,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -689,7 +703,7 @@
         "  adj_distance = generate_adjacency_matrix(distances)\n",
         "  return (all_cities, adj_distance, N, Imax)"
       ],
-      "execution_count": 365,
+      "execution_count": 34,
       "outputs": []
     },
     {
@@ -700,7 +714,7 @@
       "source": [
         "#print(get_dictarr_cities_by_hand())"
       ],
-      "execution_count": 366,
+      "execution_count": 35,
       "outputs": []
     },
     {
@@ -743,9 +757,9 @@
         "  tabu_list = [] # [\"0\",2] = [city, tabu_time]\n",
         "  \n",
         "  # Para no estancar el algoritmo en 248\n",
-        "  possible_solutions, city_used = get_neighborhood(X)\n",
-        "  X = possible_solutions[0] \n",
-        "  tabu_list.append([city_used, tabu_time])\n",
+        "  #possible_solutions, city_used = get_neighborhood(X)\n",
+        "  #X = possible_solutions[0] \n",
+        "  #tabu_list.append([city_used, tabu_time])\n",
         "\n",
         "  while k <= Imax:\n",
         "    k += 1\n",
@@ -772,7 +786,7 @@
         "\n",
         "  return (X, f(X, all_cities))"
       ],
-      "execution_count": 423,
+      "execution_count": 42,
       "outputs": []
     },
     {
@@ -791,7 +805,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "F4eCpXORoSCD",
-        "outputId": "650ba286-6150-415e-b322-9f09a7d86fe9"
+        "outputId": "a0b42b30-5a54-4918-a7ca-821630029b21"
       },
       "source": [
         "if __name__ == \"__main__\":\n",
@@ -841,15 +855,19 @@
         "    \n",
         "    print(f\"Mejor solución: {min(solutions)} \")#{better_way}, {better_weight}\")\n",
         "    print(f\"Peor solución: {max(solutions)}\")#{poor_way}, {poor_weight}\")\n",
+        "    # Se supone que cuando es un número impar, se hace un promedio de los dos \n",
+        "    # del centro pero ¿cóómo haces eso con listas? .-. \n",
+        "    # Es por ello que lo he puesto así\n",
         "    print(f\"Mediana ejecuciones: {solutions[int(len(solutions)/2)]}\")\n",
-        "    print(f\"Media: {media/len(solutions)}\")\n",
+        "    #print(f\"Media: {media/len(solutions)}\")\n",
+        "    print(f\"Media: {media/M}\")\n",
         "    print(f\"Desviación estandar: {np.std(stdesv)}\")\n",
         "  \n",
         "  else:\n",
         "    print(\"Opción no valida\")\n",
         "  #print(f\"->Búsqueda tabú: {tabu_search(Imax, N, my_cities, adj_mat)}\")"
       ],
-      "execution_count": 425,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "stream",
@@ -859,26 +877,64 @@
             "2. Input desde archivo de texto\n",
             "2\n",
             "Nombre del archivo: input.txt\n",
-            "Número de ejecuciones: 1000\n",
-            "Mejor solución: (['0', '1', '4', '7', '2', '6', '9', '8', '3', '5', '0'], 248) \n",
-            "Peor solución: (['0', '9', '8', '4', '3', '6', '2', '7', '1', '5', '0'], 332)\n",
+            "Número de ejecuciones: 10000\n",
+            "Mejor solución: (['0', '5', '3', '8', '9', '6', '2', '7', '4', '1', '0'], 248) \n",
+            "Peor solución: (['0', '5', '3', '8', '9', '6', '2', '7', '4', '1', '0'], 248)\n",
             "Mediana ejecuciones: (['0', '5', '3', '8', '9', '6', '2', '7', '4', '1', '0'], 248)\n",
-            "Media: 261.113\n",
-            "Desviación estandar: 24.033523066749908\n"
+            "Media: 248.0\n",
+            "Desviación estandar: 0.0\n"
           ],
           "name": "stdout"
         }
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "PWGM90ImenXt"
+      },
+      "source": [
+        "> **Comentario del autor:** Estuve debugeando por un buen rato en busca de fallos ya que hice corridas de M=1, 10, 100, 1000 y 10000 y para este problema en particular, *la mejor solución* y *la peor solución* dan 248 y creo que es debido a que la solución inicial greedy genera un camino con peso de 271, que como podemos darnos cuenta, esta demasiado cerca de 248, por lo que puedo decir que el algoritmo se estanca en ese minimo local. \n",
+        "\n",
+        "> Pero, si añadimos estás lineas de código: \n",
+        "\n",
+        "```\n",
+        "possible_solutions, city_used = get_neighborhood(X)\n",
+        "X = possible_solutions[0] \n",
+        "tabu_list.append([city_used, tabu_time])\n",
+        "```\n",
+        "en la función de TabuSearch, justo antes del while, a la hora de correr el algoritmo, nos da la oportunidad de hacer más exploración. Básicamente lo que hacen estas lineas es que obtienen el vecindario de la solución inicial greedy y en lugar de tomar el camino de menor peso, toma el primer camino del vecindario. \n",
+        "Da igual el peso, toma el primero y eso, cuando corremos el algoritmo nos permite hacer más exploración.\n",
+        "\n",
+        "\n",
+        "**Importante:** Se corre el riesgo de que al final, no encuentre el minimo local, que para este caso es 248.\n",
+        "\n",
+        "Prueba de mi argumento anterior, lo encontramos en esta corrida que hice: \n",
+        "\n",
+        "\n",
+        "```\n",
+        "Número de ejecuciones: 10000\n",
+        "Mejor solución: (['0', '1', '2', '7', '4', '8', '9', '6', '3', '5', '0'], 302) \n",
+        "Peor solución: (['0', '9', '8', '4', '3', '6', '2', '7', '1', '5', '0'], 332)\n",
+        "Mediana ejecuciones: (['0', '5', '3', '8', '9', '6', '2', '7', '4', '1', '0'], 248)\n",
+        "Media: 261.0505\n",
+        "Desviación estandar: 23.826870330574263\n",
+        "```\n",
+        "\n",
+        "Por lo tanto, dejare comentadas esas lineas por defecto, si el evaluador las quiere usar, únicamente tendrá que descomentarlas.\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "PPZsAKTwl2Vk"
+        "id": "zg12LORdlLrf"
       },
       "source": [
         ""
       ],
-      "execution_count": 422,
+      "execution_count": null,
       "outputs": []
     }
   ]
