--- a/TabuSearch/BT_AgenteViajero.ipynb
+++ b/TabuSearch/BT_AgenteViajero.ipynb
@@ -89,7 +89,7 @@
         "from math import floor\n",
         "import numpy as np"
       ],
-      "execution_count": 17,
+      "execution_count": 70,
       "outputs": []
     },
     {
@@ -123,7 +123,7 @@
         "  X0 = X0+tmp+X0\n",
         "  return (X0)"
       ],
-      "execution_count": 18,
+      "execution_count": 71,
       "outputs": []
     },
     {
@@ -164,7 +164,7 @@
         "  return (min_value, city_key) \n",
         "  "
       ],
-      "execution_count": 19,
+      "execution_count": 72,
       "outputs": []
     },
     {
@@ -218,7 +218,7 @@
         "  my_way.append('0')\n",
         "  return(my_way)"
       ],
-      "execution_count": 20,
+      "execution_count": 73,
       "outputs": []
     },
     {
@@ -232,7 +232,7 @@
         "# it works!\n",
         "# ['0', '5', '3', '8', '9', '6', '2', '7', '1', '4', '0'], 271\n"
       ],
-      "execution_count": 21,
+      "execution_count": 74,
       "outputs": []
     },
     {
@@ -283,7 +283,7 @@
         "  \n",
         "  return (distance)\n"
       ],
-      "execution_count": 22,
+      "execution_count": 75,
       "outputs": []
     },
     {
@@ -310,7 +310,7 @@
         "#print(f(x, all_cities))\n",
         "# it works!"
       ],
-      "execution_count": 23,
+      "execution_count": 76,
       "outputs": []
     },
     {
@@ -345,7 +345,7 @@
         "      pass\n",
         "  return (tabu_list)"
       ],
-      "execution_count": 24,
+      "execution_count": 77,
       "outputs": []
     },
     {
@@ -377,7 +377,7 @@
         "\n",
         "  return (status)"
       ],
-      "execution_count": 25,
+      "execution_count": 78,
       "outputs": []
     },
     {
@@ -395,10 +395,6 @@
         "id": "EQDQN-nYQBd_"
       },
       "source": [
-        "#El vecindario de una solución se genera de la siguiente forma: Se elige\n",
-        "#al azar una posición de la permutación. Se generan N-2 soluciones\n",
-        "#nuevas moviendo la ciudad de esa posición a cualquiera de las otras\n",
-        "#N-2 posiciones posibles.\n",
         "def get_neighborhood(current_solution):\n",
         "  \"\"\"function to get more possibles solutions and maybe better\n",
         "  current_solution = array with the current order of the cities\n",
@@ -429,7 +425,7 @@
         "\n",
         "  return (neighborhood, city)"
       ],
-      "execution_count": 26,
+      "execution_count": 79,
       "outputs": []
     },
     {
@@ -446,7 +442,7 @@
         "#print(len(vecindario), city_used)\n",
         "# It works!"
       ],
-      "execution_count": 27,
+      "execution_count": 80,
       "outputs": []
     },
     {
@@ -475,7 +471,7 @@
         "  return(np.where(matrix,matrix,matrix.T))\n",
         "#dis_mat = np.where(matrix,matrix,matrix.T)"
       ],
-      "execution_count": 28,
+      "execution_count": 81,
       "outputs": []
     },
     {
@@ -498,7 +494,7 @@
         "# it works!\n",
         "#adj"
       ],
-      "execution_count": 29,
+      "execution_count": 82,
       "outputs": []
     },
     {
@@ -525,7 +521,7 @@
         "  min_value = 10000\n",
         "  city_key = ''\n",
         "  tmp = list(adj_matrix) # convertimos a lista para poder usar .index\n",
-        "  #print(\"Empieza\")\n",
+        "\n",
         "  #print(f\"my_Way: {my_way}\")#\" y adj_matrix: {adj_matrix}\")\n",
         "  key = 0 # Correspondera al indice y a su vez a la ciudad\n",
         "  for value in adj_matrix:\n",
@@ -534,10 +530,11 @@
         "    # a la hora de obtener el indicie, si queria el segundo me daba el del primero\n",
         "    # por eso cambie a la declaracióón de key = 0\n",
         "    #key = tmp.index(value) # Obtenemos el indice del valor actual que corresponderáá a la ciudad\n",
-        "    #print(\"value\", value)\n",
+        "   \n",
         "    #(f\"value: {value}, min_value: {min_value}, ciudad: {key}\")\n",
         "    #key = arr_index_adj(adj_matrix, value)\n",
         "    #if (adj_matrix[key] == value) == True:\n",
+        "\n",
         "    # <= Para generar el minimo local desde el inicio \n",
         "    if (value < min_value) and (str(key) not in my_way): # corroboramos que tenemos la ciudad de menor peso y que no ha sido visitada \n",
         "      #print(f\"ciudad: {key} valor: {value}\")\n",
@@ -551,7 +548,7 @@
         "  #return (min_value, city_key)\n",
         "  return (adj_matrix[city_key], city_key)"
       ],
-      "execution_count": 30,
+      "execution_count": 83,
       "outputs": []
     },
     {
@@ -596,7 +593,7 @@
         "  return(my_way)\n",
         "    "
       ],
-      "execution_count": 31,
+      "execution_count": 84,
       "outputs": []
     },
     {
@@ -608,7 +605,7 @@
         "#way = generate_greedy_solution_adj_matrix(adjacency_matrix)\n",
         "#print(way, f(way, my_cities))"
       ],
-      "execution_count": 32,
+      "execution_count": 85,
       "outputs": []
     },
     {
@@ -659,7 +656,7 @@
         "  #print(f\"diccionario de ciudades: {my_cities}\\narreglo de arreglos: {distances}\")\n",
         "  return (my_cities, adj_distances, N, Imax)"
       ],
-      "execution_count": 33,
+      "execution_count": 86,
       "outputs": []
     },
     {
@@ -703,7 +700,7 @@
         "  adj_distance = generate_adjacency_matrix(distances)\n",
         "  return (all_cities, adj_distance, N, Imax)"
       ],
-      "execution_count": 34,
+      "execution_count": 87,
       "outputs": []
     },
     {
@@ -714,7 +711,7 @@
       "source": [
         "#print(get_dictarr_cities_by_hand())"
       ],
-      "execution_count": 35,
+      "execution_count": 88,
       "outputs": []
     },
     {
@@ -740,10 +737,8 @@
         "  adj_matx = array with the adjacency matrix\n",
         "  return: (array with the best way, int with the whole distance)\n",
         "  \"\"\"\n",
-        "  #from math import floor\n",
+        "  \n",
         "  # Generar solución inicial X0.\n",
-        "  # El viajero siempre parte de n0\n",
-        "  # De acuerdo a las consideraciones: La solucion inicial se genera utilizando un algoritmo voraz.\n",
         "  #X0 = generate_solution(N) # aleatoria  #X0 = generate_greedy_solution() # no generica\n",
         "  X0 = generate_greedy_solution_adj_matrix(adj_matx) # generica\n",
         "  \n",
@@ -786,7 +781,7 @@
         "\n",
         "  return (X, f(X, all_cities))"
       ],
-      "execution_count": 42,
+      "execution_count": 89,
       "outputs": []
     },
     {
@@ -805,7 +800,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "F4eCpXORoSCD",
-        "outputId": "a0b42b30-5a54-4918-a7ca-821630029b21"
+        "outputId": "d0eec2df-a3db-45b0-9ea4-26066b7d9e42"
       },
       "source": [
         "if __name__ == \"__main__\":\n",
@@ -816,7 +811,7 @@
         "    # dict city:[distances], adjacency matrix, num cities, num iterations \n",
         "    my_cities, adj_mat, N, Imax = get_dictarr_cities_by_hand()\n",
         "    #print(my_cities,'\\n', adj_mat, '\\n', N, '\\n', Imax)\n",
-        "    #print(f\"->Búsqueda tabú: {tabu_search(Imax, N, my_cities, adj_mat)}\")\n",
+        "    \n",
         "    \n",
         "  elif type_input == 2:\n",
         "    file_name = str(input(\"Nombre del archivo: \"))\n",
@@ -824,14 +819,12 @@
         "    # dict city:[distances], adjacency matrix, num cities, num iterations \n",
         "    my_cities, adj_mat, N, Imax = get_dictarr_cities_by_textfile(file_name)\n",
         "    #print(my_cities,'\\n', adj_mat, '\\n', N, '\\n', Imax)\n",
-        "    #print(f\"->Búsqueda tabú: {tabu_search(Imax, N, my_cities, adj_mat)}\")\n",
+        "\n",
         "    # ------------------------------------------PARTE 2\n",
-        "    #1. Mejor soluci ́on encontrada considerando las M ejecuciones.\n",
-        "    #2. Peor soluci ́on encontrada considerando las M ejecuciones.\n",
-        "    #3. Soluci ́on que corresponde a la mediana considerando las M ejecuciones.\n",
-        "    #4. Media del valor de la funci ́on objetivo considerando las M ejecuciones.\n",
-        "    #5. Desviaci ́on est ́andar del valor de la funci ́on objetivo considerando las M ejecuciones.\n",
+        "\n",
         "    solutions = []\n",
+        "    #just_ways = []\n",
+        "    #just_weight = []\n",
         "    #better_way = \"\"; better_weight = 100000\n",
         "    #poor_way = \"\"; poor_weight = 0\n",
         "    media = 0\n",
@@ -840,21 +833,22 @@
         "    while tmp != M:\n",
         "      way, weight = tabu_search(Imax, N, my_cities, adj_mat)\n",
         "      element = (way, weight)\n",
+        "      #just_ways.append(way)\n",
+        "      #just_weight.append(weight)\n",
         "      media += weight\n",
         "      stdesv.append(weight)\n",
-        "      #if element[1] < better_weight:\n",
-        "        #better_weight = element[1]\n",
-        "        #better_way = element[0]\n",
-        "      #if element[1] > poor_weight:\n",
-        "        #poor_weight = element[1]\n",
-        "        #poor_way = element[0]\n",
+        "      \n",
         "\n",
         "\n",
         "      solutions.append(element)\n",
         "      tmp += 1\n",
         "    \n",
-        "    print(f\"Mejor solución: {min(solutions)} \")#{better_way}, {better_weight}\")\n",
-        "    print(f\"Peor solución: {max(solutions)}\")#{poor_way}, {poor_weight}\")\n",
+        "    # Ordenamos de manera ascendente en base al costo de recorrido de la solución\n",
+        "    solutions = sorted(solutions, key=lambda weight : weight[1]) \n",
+        "    #print(f\"Mejor solución: {min(solutions)} \")#{better_way}, {better_weight}\")\n",
+        "    print(f\"Mejor solución: {solutions[0]}\")\n",
+        "    #print(f\"Peor solución: {max(solutions)}\")#{poor_way}, {poor_weight}\")\n",
+        "    print(f\"Peor solución: {solutions[-1]}\")\n",
         "    # Se supone que cuando es un número impar, se hace un promedio de los dos \n",
         "    # del centro pero ¿cóómo haces eso con listas? .-. \n",
         "    # Es por ello que lo he puesto así\n",
@@ -867,7 +861,7 @@
         "    print(\"Opción no valida\")\n",
         "  #print(f\"->Búsqueda tabú: {tabu_search(Imax, N, my_cities, adj_mat)}\")"
       ],
-      "execution_count": 44,
+      "execution_count": 90,
       "outputs": [
         {
           "output_type": "stream",
@@ -877,8 +871,8 @@
             "2. Input desde archivo de texto\n",
             "2\n",
             "Nombre del archivo: input.txt\n",
-            "Número de ejecuciones: 10000\n",
-            "Mejor solución: (['0', '5', '3', '8', '9', '6', '2', '7', '4', '1', '0'], 248) \n",
+            "Número de ejecuciones: 10\n",
+            "Mejor solución: (['0', '5', '3', '8', '9', '6', '2', '7', '4', '1', '0'], 248)\n",
             "Peor solución: (['0', '5', '3', '8', '9', '6', '2', '7', '4', '1', '0'], 248)\n",
             "Mediana ejecuciones: (['0', '5', '3', '8', '9', '6', '2', '7', '4', '1', '0'], 248)\n",
             "Media: 248.0\n",
@@ -925,17 +919,6 @@
         "\n",
         "\n"
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "zg12LORdlLrf"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
