--- a/RS/RS_MochilaMaximizada.ipynb
+++ b/RS/RS_MochilaMaximizada.ipynb
@@ -91,7 +91,7 @@
         "from math import e\n",
         "from numpy import std"
       ],
-      "execution_count": 87,
+      "execution_count": 37,
       "outputs": []
     },
     {
@@ -134,7 +134,7 @@
         "    bag_weight = 1000 \n",
         "    return (False, bag_weight)"
       ],
-      "execution_count": 88,
+      "execution_count": 38,
       "outputs": []
     },
     {
@@ -176,7 +176,7 @@
         "  return (bag_value, valid_objects)\n",
         "  "
       ],
-      "execution_count": 89,
+      "execution_count": 39,
       "outputs": []
     },
     {
@@ -221,7 +221,7 @@
         "      # Generamos una nueva solución \n",
         "      binary_chain_xi = [randint(0,1) for i in range(len(value_objects))]\n"
       ],
-      "execution_count": 90,
+      "execution_count": 40,
       "outputs": []
     },
     {
@@ -231,7 +231,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "a-6ATK-RJQ7a",
-        "outputId": "86c35dca-616a-4bda-9c7c-719d89fd76b0"
+        "outputId": "69d567df-647b-497f-a7e3-4b591c552484"
       },
       "source": [
         "# test for get_initial_soluton\n",
@@ -248,15 +248,15 @@
         "#print(just_binary)\n",
         "# it works!"
       ],
-      "execution_count": 91,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "objetos validos: [1, 2, 3]\n",
-            "cadena binaria: [0, 1, 1, 1, 0]\n",
-            "valor de mochila: 23\n",
-            "peso mochila: 12\n"
+            "objetos validos: [0, 1, 2]\n",
+            "cadena binaria: [1, 1, 1, 0, 0]\n",
+            "valor de mochila: 26\n",
+            "peso mochila: 9\n"
           ],
           "name": "stdout"
         }
@@ -284,7 +284,7 @@
         "  \"\"\"\n",
         "  return (0.99*t)"
       ],
-      "execution_count": 92,
+      "execution_count": 42,
       "outputs": []
     },
     {
@@ -294,12 +294,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "La3rZEIpf1oL",
-        "outputId": "45a57c61-9920-4b8c-e668-8570a86b6a24"
+        "outputId": "56851bd2-d313-4cc8-f43d-467676f27e57"
       },
       "source": [
         "update_temperature(0.1)"
       ],
-      "execution_count": 93,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -311,7 +311,80 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 93
+          "execution_count": 43
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "VSzNpId6oz4g"
+      },
+      "source": [
+        "# [Reto Función] Otra generación de vecindario \n",
+        "---\n",
+        "Con la finalidad de variar un poco las métricas que obtenemos al final"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9r3runWFpA7R"
+      },
+      "source": [
+        "def other_generate_neighborhood(X, weight_objects, bag_capacity):\n",
+        "  \"\"\"function to generate other neighborhood different to main\n",
+        "  X = binary list\n",
+        "  weight_objects = list with the objects weights\n",
+        "  bag_capacity = int with the bag capacity\n",
+        "  return: other binary lists get from X \n",
+        "  \"\"\"\n",
+        "  neighborhood = []\n",
+        "  all_x = list(permutations(X))\n",
+        "  all_x = list(map(list, all_x))\n",
+        "  \n",
+        "  for i in all_x: \n",
+        "    if g(weight_objects, i, bag_capacity)[1] < bag_capacity:\n",
+        "      neighborhood.append(i)\n",
+        "    #if len(neighborhood) >= 5:\n",
+        "      #break\n",
+        "    \n",
+        "    \n",
+        "\n",
+        "  y = neighborhood\n",
+        "  return (y)"
+      ],
+      "execution_count": 44,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LYP30dp_pDA2",
+        "outputId": "034ce327-1e1d-436e-9ec5-0d03cf3d5fb3"
+      },
+      "source": [
+        "# test for generate_neighborhood\n",
+        "temp_initial = 1000\n",
+        "temp_end = 0.1\n",
+        "bag_capacity = 15\n",
+        "value_objects = [5, 14, 7, 2, 23]\n",
+        "weight_objects = [2, 3, 4, 5, 10]\n",
+        "print(other_generate_neighborhood([0, 0, 1, 0, 1], weight_objects, bag_capacity))\n",
+        "\n",
+        "# it works!"
+      ],
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[0, 0, 1, 0, 1], [0, 0, 1, 1, 0], [0, 0, 1, 1, 0], [0, 0, 1, 0, 1], [0, 1, 0, 0, 1], [0, 1, 0, 1, 0], [0, 1, 0, 0, 1], [0, 1, 0, 1, 0], [0, 1, 1, 0, 0], [0, 1, 1, 0, 0], [0, 0, 1, 0, 1], [0, 0, 1, 1, 0], [0, 0, 1, 0, 1], [0, 0, 1, 1, 0], [0, 1, 0, 1, 0], [0, 1, 0, 0, 1], [0, 1, 1, 0, 0], [0, 1, 1, 0, 0], [0, 1, 0, 0, 1], [0, 1, 0, 1, 0], [0, 0, 1, 0, 1], [0, 0, 1, 1, 0], [0, 0, 1, 1, 0], [0, 0, 1, 0, 1], [0, 1, 0, 0, 1], [0, 1, 0, 1, 0], [0, 1, 0, 0, 1], [0, 1, 0, 1, 0], [0, 1, 1, 0, 0], [0, 1, 1, 0, 0], [0, 0, 1, 0, 1], [0, 0, 1, 1, 0], [0, 0, 1, 0, 1], [0, 0, 1, 1, 0], [0, 1, 0, 1, 0], [0, 1, 0, 0, 1], [0, 1, 1, 0, 0], [0, 1, 1, 0, 0], [0, 1, 0, 0, 1], [0, 1, 0, 1, 0], [1, 0, 0, 0, 1], [1, 0, 0, 1, 0], [1, 0, 0, 0, 1], [1, 0, 0, 1, 0], [1, 0, 1, 0, 0], [1, 0, 1, 0, 0], [1, 0, 0, 0, 1], [1, 0, 0, 1, 0], [1, 0, 0, 0, 1], [1, 0, 0, 1, 0], [1, 0, 1, 0, 0], [1, 0, 1, 0, 0], [1, 0, 0, 0, 1], [1, 0, 0, 1, 0], [1, 0, 0, 0, 1], [1, 0, 0, 1, 0], [1, 0, 1, 0, 0], [1, 0, 1, 0, 0], [1, 1, 0, 0, 0], [1, 1, 0, 0, 0], [1, 1, 0, 0, 0], [1, 1, 0, 0, 0], [1, 1, 0, 0, 0], [1, 1, 0, 0, 0], [0, 0, 1, 0, 1], [0, 0, 1, 1, 0], [0, 0, 1, 0, 1], [0, 0, 1, 1, 0], [0, 0, 1, 0, 1], [0, 0, 1, 1, 0], [0, 0, 1, 0, 1], [0, 0, 1, 1, 0], [0, 1, 0, 0, 1], [0, 1, 0, 1, 0], [0, 1, 0, 0, 1], [0, 1, 0, 1, 0], [0, 1, 1, 0, 0], [0, 1, 1, 0, 0], [0, 1, 0, 0, 1], [0, 1, 0, 1, 0], [0, 1, 0, 0, 1], [0, 1, 0, 1, 0], [0, 1, 1, 0, 0], [0, 1, 1, 0, 0], [1, 0, 0, 1, 0], [1, 0, 0, 0, 1], [1, 0, 1, 0, 0], [1, 0, 1, 0, 0], [1, 0, 0, 0, 1], [1, 0, 0, 1, 0], [1, 0, 0, 1, 0], [1, 0, 0, 0, 1], [1, 0, 1, 0, 0], [1, 0, 1, 0, 0], [1, 0, 0, 0, 1], [1, 0, 0, 1, 0], [1, 1, 0, 0, 0], [1, 1, 0, 0, 0], [1, 1, 0, 0, 0], [1, 1, 0, 0, 0], [1, 1, 0, 0, 0], [1, 1, 0, 0, 0], [1, 0, 0, 0, 1], [1, 0, 0, 1, 0], [1, 0, 0, 0, 1], [1, 0, 0, 1, 0], [1, 0, 1, 0, 0], [1, 0, 1, 0, 0]]\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -365,7 +438,7 @@
         "  y = neighborhood\n",
         "  return (y)\n"
       ],
-      "execution_count": 94,
+      "execution_count": 46,
       "outputs": []
     },
     {
@@ -375,7 +448,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9nYKif0zI9Aj",
-        "outputId": "e35a9784-ea49-41be-ffdb-8a1bbac710ef"
+        "outputId": "97af63be-5c8f-4de2-ccb5-a1efd409c8ae"
       },
       "source": [
         "# test for generate_neighborhood\n",
@@ -388,7 +461,7 @@
         "\n",
         "# it works!"
       ],
-      "execution_count": 95,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "stream",
@@ -445,7 +518,10 @@
         "  while T0 >= temp_end:\n",
         "    # Elegir aleatoriamente una solución \"y\" del vecindario, y E N(x(t))\n",
         "    y = choice(generate_neighborhood(X[t], weight_objects, bag_capacity))\n",
-        "\n",
+        "    \n",
+        "    # Si el evaluador quiere probar con la generación de vecinos aleatorio (no la estipulada en el manual)\n",
+        "    # descompente la siguiente linea y comente la anterior:\n",
+        "    #y = choice(other_generate_neighborhood(X[t], weight_objects, bag_capacity))\n",
         "    #if f(y) es mejor que f(xbest) then\n",
         "    if f(value_objects, y)[0] > f(value_objects, Xbest)[0]:\n",
         "      #Xbest = y\n",
@@ -478,7 +554,7 @@
         "\n",
         "  return (objects_in_bag, Xbest, Fbest, bag_weight)"
       ],
-      "execution_count": 102,
+      "execution_count": 48,
       "outputs": []
     },
     {
@@ -488,7 +564,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SoZFE9LIJBls",
-        "outputId": "d5ffa1a0-21a9-46c6-ee3b-b26b88ba46fc"
+        "outputId": "1f0ba738-40bd-456a-d076-91f7a22915b3"
       },
       "source": [
         "temp_initial = 1000\n",
@@ -500,7 +576,7 @@
         "print(f\"indice de objetos en la mochila: {objects_in_bag}\\nlista binaria asociada: {binary}\")\n",
         "print(f\"valor de mochila: {bag_value}\\npeso de mochila: {bag_weight}\")"
       ],
-      "execution_count": 103,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "stream",
@@ -554,7 +630,7 @@
         "  return (temp_initial, temp_end, bag_capacity, value_objects, weight_objects)\n",
         "  "
       ],
-      "execution_count": 98,
+      "execution_count": 50,
       "outputs": []
     },
     {
@@ -596,7 +672,7 @@
         "        \n",
         "  return (temp_initial, temp_end, bag_capacity, value_objects, weight_objects)"
       ],
-      "execution_count": 99,
+      "execution_count": 51,
       "outputs": []
     },
     {
@@ -616,7 +692,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7ZrhRq4A_WCa",
-        "outputId": "c2fe820d-4372-4932-bffb-7ad47bafdc50"
+        "outputId": "03487779-d42d-4edb-96a1-ac53c2f6e61f"
       },
       "source": [
         "if __name__ == \"__main__\":\n",
@@ -659,9 +735,9 @@
         "    solutions = sorted(solutions, key=lambda value: value[2]) \n",
         "    #print(solutions)\n",
         "    #print(f\"Mejor solución: {min(solutions)} \")#{better_way}, {better_weight}\")\n",
-        "    print(f\"\\nMejor solución: {solutions[0]}\")\n",
+        "    print(f\"\\nMejor solución: {solutions[-1]}\")\n",
         "    #print(f\"Peor solución: {max(solutions)}\")#{poor_way}, {poor_weight}\")\n",
-        "    print(f\"Peor solución: {solutions[-1]}\")\n",
+        "    print(f\"Peor solución: {solutions[0]}\")\n",
         "    # Se supone que cuando es un número impar, se hace un promedio de los dos \n",
         "    # del centro pero ¿cóómo haces eso con listas? .-. \n",
         "    # Es por ello que lo he puesto así\n",
@@ -674,7 +750,7 @@
         "    print(\"Opción no valida\")\n",
         "  #print(f\"->Búsqueda tabú: {tabu_search(Imax, N, my_cities, adj_mat)}\")"
       ],
-      "execution_count": 104,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "stream",
@@ -684,7 +760,7 @@
             "2. Input desde archivo de texto\n",
             "2\n",
             "Nombre del archivo: input.txt\n",
-            "Número de ejecuciones: 10000\n",
+            "Número de ejecuciones: 100\n",
             "\n",
             "Mejor solución: ([1, 4], [0, 1, 0, 0, 1], 37, 13)\n",
             "Peor solución: ([1, 4], [0, 1, 0, 0, 1], 37, 13)\n",
@@ -697,14 +773,60 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "rykZkJchrUQ1"
+      },
+      "source": [
+        "> A la hora de realizar el reto para tratar de mejorar el algoritmo, entre las cosas que hice se encuentra una generación de vecindario diferente a la propuesta en el manual (ver función other_generate_neighborhood). Los datos varian más como se observa en este output: \n",
+        "\n",
+        "```\n",
+        "Número de ejecuciones: 1000\n",
+        "\n",
+        "Mejor solución: ([1, 4], [0, 1, 0, 0, 1], 37, 13)\n",
+        "Peor solución: ([], [0, 0, 0, 0, 0], 0, 0)\n",
+        "Mediana ejecuciones: ([0, 1, 2], [1, 1, 1, 0, 0], 26, 12)\n",
+        "Media: 29.166\n",
+        "Desviación estandar: 9.352028870785206\n",
+        "```\n",
+        "Pero a mayor número de ejecuciones, pasa justo esto, que la peor solución corresponde a puros ceros. Lógicamente no esta mal pero no sé a que se debe. \n",
+        "Observe, cuando hay 10 ejecuciones únicamente\n",
+        "\n",
+        "```\n",
+        "Número de ejecuciones: 10\n",
+        "\n",
+        "Mejor solución: ([1, 4], [0, 1, 0, 0, 1], 37, 13)\n",
+        "Peor solución: ([4], [0, 0, 0, 0, 1], 23, 10)\n",
+        "Mediana ejecuciones: ([0, 1, 2], [1, 1, 1, 0, 0], 26, 12)\n",
+        "Media: 29.2\n",
+        "Desviación estandar: 6.462197768561405\n",
+        "```\n",
+        "En cambio, con la generación de vecindario propuesta tenemos el siguiente output: \n",
+        "\n",
+        "```\n",
+        "Número de ejecuciones: 1000\n",
+        "\n",
+        "Mejor solución: ([1, 4], [0, 1, 0, 0, 1], 37, 13)\n",
+        "Peor solución: ([1, 4], [0, 1, 0, 0, 1], 37, 13)\n",
+        "Mediana ejecuciones: ([1, 4], [0, 1, 0, 0, 1], 37, 13)\n",
+        "Media: 37.0\n",
+        "Desviación estandar: 0.0\n",
+        "```\n",
+        "Que evidentemente no varia en nada.\n",
+        "\n",
+        "> **POR DEFECTO SE A DEJADO LA GENERACION DE VECINOS TAL COMO LA PIDE EN EL MANUAL**\n",
+        "\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "f4Gk6GnnHHkp"
+        "id": "DJ0Ps0dCt5Ca"
       },
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 52,
       "outputs": []
     }
   ]
